# mkpoker

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  third_party.txt
.github/workflows/: ci.yml  macos.yml  ubuntu.yml  ubuntu_clang.yml  windows.yml
cmake/: CPM.cmake
example/: CMakeLists.txt  demo_buckets.cpp  demo_cfr.cpp  demo_equity_calc.cpp  demo_game_w_cards.cpp  demo_gamestate.cpp  demo_new_cfr.cpp  demo_print_hh.cpp
include/mkpoker/base/: card.hpp  cardset.hpp  hand.hpp  normalize.hpp  range.hpp  rank.hpp  suit.hpp
include/mkpoker/cfr/: TODOs  action_abstraction.hpp  bucket.hpp  card_abstraction.hpp  cfr.hpp  game_abstraction.hpp  gamestate_encoder.hpp  node.hpp
include/mkpoker/game/: game.hpp  game_def.hpp  handhistory.hpp
include/mkpoker/holdem/: holdem_equity_calculation.hpp  holdem_evaluation.hpp  holdem_evaluation_result.hpp  holdem_lookup_tables.hpp  holdem_result.hpp
include/mkpoker/util/: algorithm.hpp  array.hpp  bit.hpp  card_generator.hpp  mtp.hpp  utility.hpp
script/: build_libc++.sh  build_libcxx.sh  install.sh
test/: CMakeLists.txt  bitset_catch.cpp  bitset_test.cpp  card_test.cpp  cardset_test.cpp  game_catch.cpp  game_test.cpp  hand_test.cpp  holdem_eval_result_test.cpp  holdem_eval_test.cpp  range_test.cpp  rank_test.cpp  suit_test.cpp
